infra/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.38.33.27573",
      "templateHash": "641055268935104866"
    },
    "description": "Cinder - Persistent Vibe Coding Server"
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "swedencentral"
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_B2s",
      "metadata": {
        "description": "VM size: burstable 2 vCPU, 4GB RAM"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "cinder",
      "metadata": {
        "description": "Administrator username"
      }
    },
    "sshPublicKey": {
      "type": "securestring",
      "metadata": {
        "description": "SSH public key"
      }
    },
    "entraTenantId": {
      "type": "string",
      "metadata": {
        "description": "Entra ID tenant ID"
      }
    },
    "entraClientId": {
      "type": "string",
      "metadata": {
        "description": "Entra ID client ID for app registration"
      }
    },
    "sshAllowedIp": {
      "type": "string",
      "defaultValue": "0.0.0.0/0",
      "metadata": {
        "description": "Allowed SSH source IP (your home/office IP)"
      }
    },
    "domainName": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Custom domain for the server"
      }
    }
  },
  "variables": {
    "$fxv#0": "I2Nsb3VkLWNvbmZpZw0KDQpwYWNrYWdlX3VwZGF0ZTogdHJ1ZQ0KcGFja2FnZV91cGdyYWRlOiB0cnVlDQoNCnBhY2thZ2VzOg0KICAtIGN1cmwNCiAgLSBnaXQNCiAgLSBidWlsZC1lc3NlbnRpYWwNCiAgLSBweXRob24zDQogIC0gcHl0aG9uMy1waXANCiAgLSBweXRob24zLXZlbnYNCiAgLSBmYWlsMmJhbg0KICAtIHVmdw0KICAtIGpxDQoNCndyaXRlX2ZpbGVzOg0KICAtIHBhdGg6IC9ldGMvZmFpbDJiYW4vamFpbC5sb2NhbA0KICAgIGNvbnRlbnQ6IHwNCiAgICAgIFtzc2hkXQ0KICAgICAgZW5hYmxlZCA9IHRydWUNCiAgICAgIHBvcnQgPSBzc2gNCiAgICAgIGZpbHRlciA9IHNzaGQNCiAgICAgIGxvZ3BhdGggPSAvdmFyL2xvZy9hd [...]
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-01-01",
      "name": "cinder-nsg",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHTTPS",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowHTTP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowSSH",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[parameters('sshAllowedIp')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "DenyAllInbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4096,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-01-01",
      "name": "cinder-vnet",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.1.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.1.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'cinder-nsg')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'cinder-nsg')]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-01-01",
      "name": "cinder-pip",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[format('cinder-{0}', uniqueString(resourceGroup().id))]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-01-01",
      "name": "cinder-nic",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[format('{0}/subnets/default', resourceId('Microsoft.Network/virtualNetworks', 'cinder-vnet'))]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'cinder-pip')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'cinder-pip')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'cinder-vnet')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-03-01",
      "name": "cinder-vm",
      "location": "[parameters('location')]",
      "identity": {
        "type": "SystemAssigned"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "cinder",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]",
                  "keyData": "[parameters('sshPublicKey')]"
                }
              ]
            }
          },
          "customData": "[variables('$fxv#0')]"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'cinder-nic')]"
            }
          ]
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            },
            "diskSizeGB": 64
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'cinder-nic')]"
      ]
    }
  ],
  "outputs": {
    "vmPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'cinder-pip'), '2024-01-01').ipAddress]"
    },
    "vmFqdn": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'cinder-pip'), '2024-01-01').dnsSettings.fqdn]"
    },
    "vmPrincipalId": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Compute/virtualMachines', 'cinder-vm'), '2024-03-01', 'full').identity.principalId]"
    }
  }
}
